modificacoes na pagina inicial

--- a/SPRINT4/Sobre/html/sobre.html
+++ b/SPRINT4/Sobre/html/sobre.html
@@ -33,6 +33,12 @@
             <span class="switch__track"></span>
             <i class="fas fa-moon"></i>
         </div>
+
+         <!-- Bonequinho de perfil -->
+         <div class="profile-icon" onclick="window.location.href='../../Tela Intermediaria/html/telaLoginCadastro.html'">
+            <i class="fas fa-user-circle"></i>
+        </div>
+        
     </div>
 
     <div class="container">
