--- a/SPRINT4/Dasboard/html/dashboard.html
+++ b/SPRINT4/Dasboard/html/dashboard.html
@@ -183,7 +183,8 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.27.3/apexcharts.min.js" integrity="sha512-nKTh1Ik8Kzbrxo9A6xOBtEbzdNYcjI4Pr5XE88sNJQk87sY8mBlUfh61lYm0i710r5mGcIZ9tWSwORQbQ4plQQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="../js/index.js"></script>
+    <script src="../js/index2.js"></script>
     <script src="../js/apexcharts-pt-br.js"></script>
+    
 </body>
 </html>
