--- a/SPRINT4/Tela Inicial/html/TelaInicial.html
+++ b/SPRINT4/Tela Inicial/html/TelaInicial.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/TelaInicial.css">
     <style>
         /* Estilos específicos para os ícones dentro dos cards */
         .status i, .status svg {
@@ -40,7 +40,7 @@
                     <span class="switch__track"></span>
                     <i class="fas fa-moon"></i>
                 </div>
-                <div class="profile-icon" onclick="window.location.href='../../Tela Intermediaria/html/telaLoginCadastro.html'">
+                <div class="profile-icon">
                     <i class="fas fa-user-circle"></i>
                 </div>
             </div>
@@ -100,7 +100,7 @@
             </section>
         </div>
     </div>
-    <script src="../js/script.js"></script>
+    <script src="../../../../TrabalhoWEB2/SPRINT4/Tela Inicial/js/script.js"></script>
 </body>
 
 </html>
