--- a/SPRINT4/Tela Inicial/html/TelaInicial.html
+++ b/SPRINT4/Tela Inicial/html/TelaInicial.html
@@ -32,6 +32,7 @@
                     <li><a href="../../Tela Inicial/html/TelaInicial.html" style="text-decoration: none; color: inherit;"><i class="fas fa-home"></i> <span class="menu-text">Página Inicial</span></a></li>
                     <li><a href="../../Tela Educacao/HTML/educacao.html" style="text-decoration: none; color: inherit;"><i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span></a></li>
                     <li><a href="../../Tela Educacao/HTML/educacao.html" style="text-decoration: none; color: inherit;"><i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span></a></li>
+                    <li><a href="../../Tela Educacao/HTML/nova.html" style="text-decoration: none; color: inherit;"><i class="fas fa-book"></i> <span class="menu-text">Educação</span></a></li>
                 </ul>
             </div>
             <div class="top-switch-profile">
@@ -40,7 +41,7 @@
                     <span class="switch__track"></span>
                     <i class="fas fa-moon"></i>
                 </div>
-                <div class="profile-icon" onclick="window.location.href='../../Tela Intermediaria/html/telaLoginCadastro.html'">
+                <div class="profile-icon">
                     <i class="fas fa-user-circle"></i>
                 </div>
             </div>
@@ -100,7 +101,7 @@
             </section>
         </div>
     </div>
-    <script src="../js/script.js"></script>
+    <script src="../js/teste.js"></script>
 </body>
 
 </html>
