--- a/SPRINT4/telaRegistros/html/telaRegistros.html
+++ b/SPRINT4/telaRegistros/html/telaRegistros.html
@@ -33,6 +33,7 @@
                     <li><a href="../../telaRegistros/html/registros_alimentacao.html" style="text-decoration: none; color: inherit;"><i class="fas fa-apple-alt"></i> <span class="menu-text">Registros Alimentação</span></a></li>
                     <li><a href="../../telaRegistros/html/telaRegistros.html" style="text-decoration: none; color: inherit;"><i class="fas fa-dumbbell"></i> <span class="menu-text">Registros Atividades Físicas</span></a></li>
                     <li><a href="../../Dasboard/html/dashboard.html" style="text-decoration: none; color: inherit;"><i class="fas fa-chart-line"></i> <span class="menu-text">Dashboard</span></a></li>
+                    <li><a href="../../Tela Educacao/HTML/nova.html" style="text-decoration: none; color: inherit;"><i class="fas fa-book"></i> <span class="menu-text">Educação</span></a></li>
                 </ul>
             </div>
             <div class="top-switch-profile">
