Modificações tela educação e tela sobre

--- a/SPRINT4/Tela Educacao/HTML/nova.html
+++ b/SPRINT4/Tela Educacao/HTML/nova.html
@@ -13,26 +13,33 @@
 </head>
 
 <body>
-    <div class="menu-toggle">
-        <i class="fas fa-bars"></i>
-    </div>
-    <div class="sidebar">
-        <div class="logo">
-            <div class="cross"></div>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><i class="fas fa-home"></i> <span class="menu-text">Início</span></li>
-                <li><i class="fas fa-chart-line"></i> <span class="menu-text">Progresso</span></li>
-                <li><i class="fas fa-clipboard"></i> <span class="menu-text">Meus Planos</span></li>
-                <li><i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span></li>
-                <li><i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span></li>
-            </ul>
-        </div>
-        <div class="switch">
-            <i class="fas fa-sun"></i>
-            <span class="switch__track"></span>
-            <i class="fas fa-moon"></i>
+    <div class="top-sidebar">
+        <div class="top-sidebar-content">
+            <div class="logo">
+                <div class="cross"></div>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><i class="fas fa-home"></i> <span class="menu-text">Início</span></li>
+                    <li><i class="fas fa-chart-line"></i> <span class="menu-text">Progresso</span></li>
+                    <li><i class="fas fa-clipboard"></i> <span class="menu-text">Meus Planos</span></li>
+                    <li><i class="fas fa-apple-alt"></i> <span class="menu-text">Dietas</span></li>
+                    <li><i class="fas fa-dumbbell"></i> <span class="menu-text">Treinos</span></li>
+                </ul>
+            </div>
+            <div class="top-switch-profile">
+                <div class="switch">
+                    <i class="fas fa-sun"></i>
+                    <span class="switch__track"></span>
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="profile-icon" onclick="">
+                    <i class="fas fa-user-circle"></i>
+                </div>
+            </div>
+            <div class="menu-toggle top-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </div>
 
@@ -407,6 +414,53 @@
                 countElement.textContent = parseInt(countElement.textContent) - 1;
             }
         }
+
+        // --- Nova função para configurar o evento do ícone de perfil ---
+        function configurarEventoIconePerfil() {
+            // Encontra o elemento do ícone de perfil (assumindo que tem a classe 'profile-icon')
+            const profileIcon = document.querySelector('.profile-icon');
+
+            // Verifica se o elemento foi encontrado
+            if (profileIcon) {
+                // Adiciona um ouvinte de evento de clique ao ícone
+                profileIcon.addEventListener('click', () => {
+                    // Faz uma requisição para o script PHP que verifica o status da sessão
+                    // Ajuste o caminho '../php/verificar_sessao.php' conforme a localização do seu arquivo
+                    fetch('../../Verificar/verificar_sessao.php')
+                        .then(response => {
+                            // Verifica se a resposta é OK antes de tentar parsear como JSON
+                            if (!response.ok) {
+                                // Se não for OK, lança um erro com o status
+                                throw new Error(`Erro HTTP! Status: ${response.status}`);
+                            }
+                            return response.json(); // Tenta parsear a resposta como JSON
+                        })
+                        .then(data => {
+                            // Com base na resposta do PHP
+                            if (data.logado) {
+                                // Se 'logado' for true, redireciona para a página de perfil
+                                // Ajuste o caminho '../../Perfil/html/perfil.html' conforme a localização do seu arquivo
+                                window.location.href = '../../Perfil/html/perfil.html';
+                            } else {
+                                // Se 'logado' for false, redireciona para a tela intermediária
+                                // Ajuste o caminho '../../Tela Intermediaria/html/telaLoginCadastro.html' conforme a localização do seu arquivo
+                                window.location.href = '../../Tela Intermediaria/html/telaLoginCadastro.html';
+                            }
+                        })
+                        .catch(error => {
+                            // Trata erros na requisição fetch (ex: script PHP não encontrado, erro de rede)
+                            console.error('Erro ao verificar sessão:', error);
+                            // Opcional: Exibir um alerta ou redirecionar para uma página de erro em caso de falha na verificação
+                            alert('Não foi possível verificar o status da sessão. Tente novamente.');
+                            // Exemplo de redirecionamento em caso de erro:
+                            // window.location.href = '../../Tela Inicial/html/TelaInicial.html';
+                        });
+                });
+            } else {
+                console.warn("Elemento com classe 'profile-icon' não encontrado.");
+            }
+        }
+
     </script>
 </body>
 
