Modificações Nos Registros de Alimentos

--- a/SPRINT4/Dasboard/html/dashboard.html
+++ b/SPRINT4/Dasboard/html/dashboard.html
@@ -36,7 +36,7 @@
                         <span class="switch__track"></span>
                         <i class="fas fa-moon"></i>
                     </div>
-                    <div class="profile-icon" onclick="window.location.href='../../Tela Intermediaria/html/telaLoginCadastro.html'">
+                    <div class="profile-icon" onclick="">
                         <i class="fas fa-user-circle"></i>
                     </div>
                 </div>
