Modificações Nos Registros de Alimentos

--- a/SPRINT4/Dasboard/html/dashboard.html
+++ b/SPRINT4/Dasboard/html/dashboard.html
@@ -110,12 +110,13 @@
 
         <section class="status">
             <div class="status__icon status__icon--alimentar">
-                <i class="fa fa-utensils"></i>
+                <i class="fa fa-fire"></i>
+
 
             </div>
             <div class="info">
                 <span class="info__total info__total--alimentar">123,456,789</span>
-                <h2 class="info__label">Consumo Alimentar</h2>
+                <h2 class="info__label">Média Calorias</h2>
             </div>
         </section>
 
